--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="project-content">
                         <h3>music playlist</h3>
                         <p>add,remove and show songs using c</p>
-                        <a href="#" class="btn">View Project</a>
+                        <a href="https://github.com/mikeo00/music-playlist" class="btn">View Project</a>
                     </div>
                 </div>
                 <div class="project">
@@ -67,7 +67,17 @@
                     <div class="project-content">
                         <h3>restaurant management system</h3>
                         <p>data structure project where u add,remove,show menu items,orders also calculates amount of saved orders and save the items in txt file</p>
-                        <a href="#" class="btn">View Project</a>
+                        <a href="https://github.com/mikeo00/resto-management" class="btn">View Project</a>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project-img">
+                        <img src="Screenshot 2025-05-14 024500.png" alt="Project 4">
+                    </div>
+                    <div class="project-content">
+                        <h3>scratch mini game</h3>
+                        <p>u have to jump over footballs where it gets harder at each region</p>
+                        <a href="https://scratch.mit.edu/projects/1174721154" class="btn">View Project</a>
                     </div>
                 </div>
             </div>
@@ -77,7 +87,7 @@
         <div class="container">
             <h2 class="section-title">Contact Me</h2>
             <div class="contact-form">
-                <form id="contactForm">
+                <form action="https://formsubmit.co/mickelosta71@email.com" method="POST">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" id="name" class="form-control" required>
