--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="container">
             <h2 class="section-title">Contact Me</h2>
             <div class="contact-form">
-                <form action="https://formsubmit.co/mickelosta71@email.com" method="POST">
+                <form action="https://formsubmit.co/mikeosta71@email.com" method="POST">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" id="name" class="form-control" required>
