--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
                 <form action="https://formsubmit.co/mikeosta71@email.com" method="POST">
                     <div class="form-group">
                         <label for="name">Name</label>
-                        <input type="text" id="name" class="form-control" required>
+                        <input type="text" name="name" id="name" class="form-control" required>
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" id="email" class="form-control" required>
+                        <input type="email" name="email" id="email" class="form-control" required>
                     </div>
                     <div class="form-group">
                         <label for="message">Message</label>
-                        <textarea id="message" class="form-control" required></textarea>
+                        <textarea id="message" name="textarea" class="form-control" required></textarea>
                     </div>
                     <button type="submit" class="btn">Send Message</button>
                 </form>
