--- a/index.html
+++ b/index.html
@@ -79,13 +79,14 @@
                         <p>you have to jump over footballs where it gets harder at each region</p>
                         <a href="https://scratch.mit.edu/projects/1174721154" class="btn">View Project</a>
                     </div>
-                     <div class="project">
+                </div>
+                    <div class="project">
                     <div class="project-img">
-                        <img src="Screenshot 2025-07-04 145751.png" alt="Project 4">
+                        <img src="Screenshot 2025-07-04 145751.png" alt="Project 5">
                     </div>
                     <div class="project-content">
                         <h3>Bloodtest AI Diagnosis</h3>
-                        <p>reads blood tests from PDF of a patient and gives a probability of the diagnosis that might happen </p>
+                        <p>reads blood tests from PDF of a patient and gives a probability of the diagnosis that might happen</p>
                         <a href="https://github.com/mikeo00/bootcamp_projai" class="btn">View Project</a>
                     </div>
                 </div>
